Exception test cases added